apps/orders/overlays/staging/stg-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: stg-redis
spec:
  selector:
    matchLabels:
      app: stg-redis
