apps/orders/overlays/staging/stg-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  labels:
    app: stg-redis
spec:
  selector:
    app: stg-redis
