apps/orders/overlays/staging/stg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ingress
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: true
spec:
  ingressClassName: nginx
  rules:
    - host: stg-orders.itsovertime.com
      http:
        paths:
          - backend:
              service:
                name: order-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
